--- a/styles.css
+++ b/styles.css
@@ -163,9 +163,12 @@ li {
 #search-icon {
     align-self: center;
     height: 1.5rem;
+    width: auto;
 }
 
 #search-bar {
+    position: relative;
+    bottom: 7px;
     width: 90%;
     height: 1.5rem;
     border: none;
@@ -270,19 +273,78 @@ button {
 }
 
 #announcements {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 20px;
+  gap: 2%;
+  font-size: 0.8rem;
     background-color: white;
     grid-area: 1 / 4 / 2 / 6;
     border-radius: var(--borders);
 }
 
+hr {
+  width: 100%;
+  margin: auto;
+  opacity: 0.5;
+}
+
 #trending {
+  gap: 10px;
     background-color: white;
     grid-area: 2 / 4 / 3 / 6;
     border-radius: var(--borders);
+    padding: 10%;
+    overflow: scroll;
+    width: 100%;
+}
+
+.trend {
+  display: grid;
+  grid-template-columns: 3rem 3fr;
+  grid-template-rows: 1.5rem 1.5rem;
+  column-gap: 5%;
+  margin-bottom: 20px;
+}
+
+.trending-img {
+  object-fit:contain;
+  min-width: 2rem;
+  min-height: 2rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.trend:nth-child(1) .trending-img {
+  background-color: rgb(186, 190, 255);
+}
+
+.trend:nth-child(2) .trending-img {
+  background-color: aquamarine;
+}
+
+.trend:nth-child(3) .trending-img {
+  background-color: rgb(132, 44, 44);
+}
+
+.trend:nth-child(4) .trending-img {
+  background-color: rgb(234, 254, 173);
+}
+
+.trend > h4 {
+  font-size: 0.9rem;
+}
+
+.trend > p {
+  font-size: 0.75rem;
+  align-self: start;
 }
 
 .project-card {
     border-radius: var(--borders);
     padding: 5%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
