--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body, main {
   min-width: 100vw;
   height: 100%;
   min-height: 100vh;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
